[package]
authors = ["Bruno Grieder <bruno.grieder@cosmian.com>"]
build = "build.rs"
edition = "2018"
name = "cosmian_crypto_base"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "cosmian_crypto_base"
path = "src/lib.rs"

[dependencies]
abe_gpsw = "0.2"
aes = "0.7"
aes-gcm = "0.9"
anyhow = {package = "eyre", version = "0.6.0"}
curve25519-dalek = "3.2"
fpe = {git = "https://github.com/Cosmian/fpe", branch = "feature/increase_feistel_rounds_number"}
# specify the js feature for the WASM target
getrandom = {version = "0.2", features = ["js"]}
hex = "0.4"
hkdf = "0.11.0"
itertools = "0.10"
num-bigint = {version = "0.4", features = ["rand", "serde"]}
num-traits = "0.2"
rand = "0.8"
rand_core = {version = "0.5", features = ["getrandom"]}
rand_distr = "0.4"
rand_hc = "0.3"
retry_panic = {git = "https://github.com/Cosmian/retry_panic"}
sha2 = "0.9.3"
sha3 = "0.9"
tracing = "0.1"

[features]
default = []
libsodium = []

[target.'cfg(all(not(target_arch = "wasm32"), not(windows)))'.dependencies]
cupid = "0.6"

[target.'cfg(all(not(target_arch = "wasm32"), not(windows)))'.build-dependencies]
bindgen = "0.59"
